--- a/partner-adapter-codes/mopub/mopub-custom-event/android-TestApp/app/src/main/res/layout/native_ad_layout.xml
+++ b/partner-adapter-codes/mopub/mopub-custom-event/android-TestApp/app/src/main/res/layout/native_ad_layout.xml
@@ -7,18 +7,74 @@
     <!--     <ImageView axndroid:id="@+id/native_ad_main_image"
             android:background="@null"/>
      -->
-    <ImageView android:id="@+id/native_ad_icon_image"
+    <ImageView android:id="@+id/native_icon_image"
+               android:layout_width="64dp"
+               android:layout_height="64dp"
+               android:background="@null"
+               android:layout_alignParentLeft="true"
+               android:layout_alignParentTop="true"
+               android:layout_marginTop="10dp"
+               android:layout_marginLeft="10dp"
+        />
+
+    <TextView android:id="@+id/native_title"
+              android:layout_width="match_parent"
+              android:layout_marginLeft="84dp"
+              android:layout_marginTop="32dp"
+              android:layout_height="wrap_content"
+              android:layout_alignParentTop="true"
+              android:layout_alignParentLeft="true"
+              android:textColor="@android:color/darker_gray"
+              android:textStyle="bold" />
+
+    <TextView android:id="@+id/native_text"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_below="@+id/native_icon_image"
+              android:layout_alignParentLeft="true"
+              android:layout_marginLeft="10dp"
+              android:layout_marginTop="10dp"
+              android:textColor="@android:color/darker_gray" />
+
+
+    <ImageView android:id="@+id/native_main_image"
+               android:layout_width="match_parent"
+               android:layout_height="@dimen/native_main_image_height"
+               android:background="@null"
+               android:layout_marginTop="10dp"
+               android:layout_marginLeft="10dp"
+               android:layout_marginRight="10dp"
+               android:layout_below="@+id/native_text"
+               android:layout_alignParentLeft="true"
+               android:contentDescription="@string/native_main_image"
+               android:scaleType="centerCrop"/>
+    <RelativeLayout
+        android:id="@+id/primary_ad_view_layout"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:background="@null"
-        android:layout_width="75dp"
-        android:layout_height="75dp"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_below="@+id/native_text"
+        android:layout_alignParentLeft="true"
+        />
 
-    <TextView android:id="@+id/native_ad_title"
+    <Button
+        android:id="@+id/native_cta"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="35dp"
+        android:text="@string/learn_more"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/native_main_image"
+        android:textSize="12sp"
+        android:layout_alignParentRight="true"
+        android:clickable="true"
+        android:paddingBottom="10dp" />
 
-    <TextView android:id="@+id/native_ad_cta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
 
     <!--     <TextView android:id="@+id/native_ad_text" />
