--- a/partner-adapter-codes/mopub/mopub-custom-event/android-TestApp/app/src/main/res/values/dimens.xml
+++ b/partner-adapter-codes/mopub/mopub-custom-event/android-TestApp/app/src/main/res/values/dimens.xml
@@ -17,5 +17,6 @@
     <dimen name="feed_item_status_pad_top">13dp</dimen>
     <dimen name="feed_item_corner_radius">3dp</dimen>
     <dimen name="feed_item_border_width">1dp</dimen>
+    <dimen name="native_main_image_height">200dp</dimen>
 
 </resources>
